[package]
name = "nannou_sketches"
version = "0.1.0"
authors = ["Alec Deason <alec@tinycountry.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.15.0"
chull = "0.2.4"

[profile.dev]
opt-level = 3
debug = false
